# typst-citegeist

./: .gitignore  README.md  lib.typ  typst-template.toml
.cargo/: config.toml
examples/: main.typ
plugin/bibreader/plugin/: Cargo.toml
plugin/citegeist/plugin/: Cargo.toml
plugin/citegeist/plugin/src/: diagnostics.rs  lib.rs
plugin/citegeist/plugin/tests/: integration.rs
scripts/: create-github.sh  make-release.sh  publish-local.sh  typst-publish.fish  typst-publish.sh  upload.sh
tests/: local-install.typ  test-lib.typ
tests/basic/: test.typ
tests/inline-comment/: test.typ
tests/name-metadata/: test.typ
xtask/src/: main.rs
