[package]
name = "citegeist"
version = "0.2.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-minimal-protocol = { path = "../" }
biblatex = "0.11"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_cbor = "0.10"
serde_derive = "1.0.204"

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

[workspace] # so that it is not included in the upper workspace

[dev-dependencies]
indexmap = "2"
